--- a/analysis/RDM/prospectTheoryMLE/basicPTFitting.Rmd
+++ b/analysis/RDM/prospectTheoryMLE/basicPTFitting.Rmd
@@ -5,15 +5,20 @@ date: '2022-10-06'
 output: html_document
 ---
 
-THIS SCRIPT HAS NOT BEEN FULLY UPDATED FOR CAP YET
-ONE THING TBD IS WHICH DATA WE WILL USE (GAINONLY AND MIXED VALENCE OR JUST GAIN ONLY?)
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
+
+library('config')
+config = config::get()
+
+
+
 # load the functions
-ptFX_source = file.path(config$pt_modeling$ptFunction)
-ptWrap_source = file.path(config$pt_modeling$ptParallelWrap)
+# NEED TO FIX CONFIGURATION FILE
+ptFX_source = file.path("capPT.R")
+ptWrap_source = file.path("PTwrapper.R")
 source(ptFX_source)
 source(ptWrap_source)
 
@@ -21,15 +26,15 @@ source(ptWrap_source)
 library('parallel') # Need to load this so mclapply is an option.
 library('tictoc'); # to keep track of time
 
-# load data for players with at least 5 plays
+# load data that includes choices from both tasks
+capdata = read.csv(file.path(config$path$combined, config$RDMcsvs$RDMbothTasks_qualtrics))
 
-#subData = # will we load both gain and loss or just gain?
 
 ```
 
 ```{r define-things-for-estimation}
 
-subjectIDs = unique(subData$subID)
+subjectIDs = unique(capdata$subID)
 nSub = length(subjectIDs)
 eps = .Machine$double.eps;
 
@@ -38,13 +43,21 @@ ncores = 4; # cores that we will use for estimation (all of them)
 niter = 250; #iterations per core
 
 
-PT_ColumnNames = c("lambda", "rhoGain", "mu","lambda SE","rhoGain SE","mu SE","log likelihood");
+PT_ColumnNames_bothTask = c("lambda", "rhoGain", "mu","lambda SE","rhoGain SE","mu SE","nLL", "failedOptims");
+PT_ColumnNames_gainTask = c("rhoGain", "mu","rhoGain SE","mu SE","log likelihood", "nLL", "failedOptims");
 
 
 # Set up data to store maximum likelihood results
-PT_ColumnNames = c("lambda","rhoGain", "Mu","lambda SE", "rhoGain SE", "Mu SE","nLL", "failed optims"); #name of columns
-PT_singleSub_results = array(data=NA, dim= c(ncores,length(PT_ColumnNames), niter), dimnames = list(c(NULL), PT_ColumnNames, (NULL))); #storing data for one person for all the iterations
-PT_allSubs_bestResult = as.data.frame(matrix(nrow=nSub, ncol = length(PT_ColumnNames), dimnames = list(c(NULL), PT_ColumnNames))); #best pars each subject, multiple times, ev of gamble
+
+PT_singleSub_bothTasks_results = array(data=NA, dim= c(ncores,length(PT_ColumnNames_bothTask), niter), dimnames = list(c(NULL), PT_ColumnNames_bothTask, (NULL))); #storing data for one person for all the iterations
+
+PT_allSubs_bothTasks_bestResult = as.data.frame(matrix(nrow=nSub, ncol = length(PT_ColumnNames_bothTask), dimnames = list(c(NULL), PT_ColumnNames_bothTask))); #best pars each subject, multiple times, ev of gamble
+
+
+PT_singleSub_gainTask_results = array(data=NA, dim= c(ncores,length(PT_ColumnNames_gainTask), niter), dimnames = list(c(NULL), PT_ColumnNames_gainTask, (NULL))); #storing data for one person for all the iterations
+
+PT_allSubs_bothTasks_bestResult = as.data.frame(matrix(nrow=nSub, ncol = length(PT_ColumnNames_gainTask), dimnames = list(c(NULL), PT_ColumnNames_gainTask))); #best pars each subject, multiple times, ev of gamble
+
 
 ```
 
@@ -52,17 +65,15 @@ PT_allSubs_bestResult = as.data.frame(matrix(nrow=nSub, ncol = length(PT_ColumnN
 ```{r, echo=FALSE}
 # try one subject/optimize once
 
-    singleSub= subData[subData$id==unique(subData$id)[100],]; #pull out data for subject of choice
-    initparval = c(.1,.1,.1,.5); #setting initial values for lambda, rho, mu when optim runs once.
-    output <- optim(initparval,ptLL,data=singleSub,method= "L-BFGS-B", lower=c(.5,.3,.3,.1), upper=c(5,1.3,1.3,20),hessian=TRUE);
+    singleSub= capdata[capdata$subID==subjectIDs[100] & capdata$rdmTask==1 & capdata$phase==1,]; #pull out data for subject of choice in gain-only and phase 1
+    initparval = c(.6,.4,.5); #setting initial values for lambda, rho, mu when optim runs once.
+    output <- optim(initparval,ptLL,data=singleSub,method= "L-BFGS-B", lower=c(.5,.3,.1), upper=c(5,1.3,20),hessian=TRUE);
     se = sqrt(diag(solve(output$hessian))); # Calculate the standard error of the parameter we estimate
-    cat("\nBest-fitting parameter=",output$par," with SE=",se); #show paramters and standard errors
+    cat("\nBest-fitting parameter=",output$par," with SE=",se); #show parameters and standard errors
 ```
 
 
-
-
-
+Left off here - feel like I need to check some things because model is not great
 ```{r}
 
 # Do the fitting for one person a bunch of times for one participant
@@ -74,19 +85,19 @@ countfailoptims = 0;
 for(i in 1:ncores){
   for(j in 1:niter){
     if (typeof(outputlist[[i]][[j]]) == 'list'){ # if outputlist is a list then optim did not fail
-      PT_singleSub_results[i,1:4,j] <- outputlist[[i]][[j]]$par
-      PT_singleSub_results[i,9,j] <- outputlist[[i]][[j]]$value; # pull out the function values
+      PT_singleSub_gainTask_results[i,1:3,j] <- outputlist[[i]][[j]]$par
+      PT_singleSub_gainTask_results[i,7,j] <- outputlist[[i]][[j]]$value; # pull out the function values
     } else {
       countfailoptims = countfailoptims + 1}
   }
 };
 
-indBest <- which(min(PT_singleSub_results[,9,], na.rm = TRUE)==PT_singleSub_results,arr.ind = T); # get the indices of the single best optimization across the cores & iterations
+indBest <- which(min(PT_singleSub_gainTask_results[,7,], na.rm = TRUE)==PT_singleSub_gainTask_results,arr.ind = T); # get the indices of the single best optimization across the cores & iterations
 bestoutput <- outputlist[[indBest[1]]][[indBest[3]]];
 if(!any(bestoutput$hessian==0)){
   se = sqrt(diag(solve(bestoutput$hessian))); 
 }
-cat("\nBest-fitting PT parameter=",bestoutput$par," with SE=",se,"ll = ", bestoutput$value); #show paramters and standard errors
+cat("\nBest-fitting PT parameter=",bestoutput$par," with SE=",se,"ll = ", bestoutput$value); #show parameters and standard errors
 
 ```
 
