update with stan model with DB

--- a/analysis/RDM/stan/cap_runStan.Rmd
+++ b/analysis/RDM/stan/cap_runStan.Rmd
@@ -48,8 +48,10 @@ capDataList = list(
 
 
 ```{r call-stan-program}
-stanModel = "/Users/shlab/Documents/GitHub/cap/analysis/RDM/stan/cap_model0basic.stan"
+
+#stanModel = "/Users/shlab/Documents/GitHub/cap/analysis/RDM/stan/cap_basic0_rhoMuLambda.stan"
 #stanModel = "/Users/hayley/Documents/GitHub/cap/analysis/RDM/stan/cap_model0basic.stan"
+stanModel = "/Users/shlab/Documents/GitHub/cap/analysis/RDM/stan/cap_basic0_rhoMuLambdaDB.stan"
 
 ```
 
@@ -59,9 +61,9 @@ stanModel = "/Users/shlab/Documents/GitHub/cap/analysis/RDM/stan/cap_model0basic
 nChains = 2 # number of chains (1 chain per core)
 fitSteps = 200 # stan will save half of this many x nChains per parameter
 
-pars = c('meanRho', 'meanMu', 'meanLambda',
-         'sdRho', 'sdMu', 'sdLambda',
-         'r', 'm', 'l');
+pars = c('meanRho', 'meanMu', 'meanLambda', 'meanDB',
+         'sdRho', 'sdMu', 'sdLambda', 'sdDB',
+         'r', 'm', 'l', 'db');
 
 starttime = proc.time()[3];
 
@@ -97,7 +99,9 @@ for (i in 1:nChains){
   else {print(noquote(sprintf('WARNING: Chain %d did not include any samples.',i)))}
 }
 
-save(stanModel,sflistFinal, file = sprintf('cap_basicRhoMuLambda_%s.Rdata',format(Sys.Date(), format="%Y%m%d")))
+save(stanModel,sflistFinal, file = sprintf('cap_basicRhoMuLambdaBD_%s.Rdata',format(Sys.Date(), format="%Y%m%d")))
+#save(stanMode, sflistFinal, file = file.path(config$path$Rdata, 'stanModelOutput/cap_basicRhoMuLambda_%s.Rdata',format(Sys.Date(), format="%Y%m%d")))
+
 
 ```
 
