--- a/analysis/RDM/stan/cap_runStan.Rmd
+++ b/analysis/RDM/stan/cap_runStan.Rmd
@@ -15,8 +15,11 @@ config = config::get()
 library(rstan)
 library(parallel)
 
-# load data file
-capData = read.csv(file.path(config$path$combined, config$RDMcsvs$RDMbothTasks_qualtrics))
+setup_source = file.path(config$code_files$rdm_setup_data)
+source(setup_source) #, local = knitr::knit_global())
+
+# # load data file (DEPRECATED)
+# capData = read.csv(file.path(config$path$combined, config$RDMcsvs$RDMbothTasks_qualtrics))
 
 ```
 
