passing in day & covRisk
adding day & covRisk to the stan data list.

--- a/analysis/RDM/stan/cap_runStan.Rmd
+++ b/analysis/RDM/stan/cap_runStan.Rmd
@@ -52,6 +52,8 @@ capDataList = list(
   gain = rdmBothQualtricsStan$rdmRiskyGain,
   loss = rdmBothQualtricsStan$rdmRiskyLoss,
   safe = rdmBothQualtricsStan$rdmAlternative,
+  day = rdmBothQualtricsStan$dayOverallSC,
+  covRisk = rdmBothQualtricsStan$covq_PAB_q1_personalRisk_centeredscaledNoNA,
   ind = rdmBothQualtricsStan$subIDseq,
   nsubj = nSub,
   N = length(rdmBothQualtricsStan$rdmChoice)
