--- a/analysis/RDM/stan/cap_runStan.Rmd
+++ b/analysis/RDM/stan/cap_runStan.Rmd
@@ -66,19 +66,21 @@ capDataList = list(
 
 #stanModel = "/Users/shlab/Documents/GitHub/cap/analysis/RDM/stan/cap_basic0_rhoMuLambda.stan"
 #stanModel = "/Users/hayley/Documents/GitHub/cap/analysis/RDM/stan/cap_model0basic.stan"
-stanModel = "/Users/shlab/Documents/GitHub/cap/analysis/RDM/stan/cap_basic0_rhoMuLambdaDB.stan"
+#stanModel = "/Users/shlab/Documents/GitHub/cap/analysis/RDM/stan/cap_basic0_rhoMuLambdaDB.stan"
+stanModel = "/Users/sokolhessner/Documents/gitrepos/cap/analysis/RDM/stan/cap_daycovRisk1_rhoMuLambdaDB_rhoChange.stan"
 
 ```
 
 ```{r configure-the-model}
 
 # define some things
-nChains = 6 # number of chains (1 chain per core)
+nChains = 4 # number of chains (1 chain per core)
 fitSteps = 10000 # stan will save half of this many x nChains per parameter
 
 pars = c('meanRho', 'meanMu', 'meanLambda', 'meanDB',
          'sdRho', 'sdMu', 'sdLambda', 'sdDB',
-         'r', 'm', 'l', 'db');
+         'r', 'm', 'l', 'db',
+         'dayRho', 'covRiskRho','dayxcovRiskRho');
 
 starttime = proc.time()[3];
 
@@ -88,7 +90,7 @@ seed = runif(1,1,1e6); # stan needs random integer from 1 to max supportable
 fit0 = stan(file = stanModel, data =capDataList, iter = 1, chains = 1, pars=pars); # this initializes or sets up the model
 
 fit0time = proc.time()[3];
-print(noquote(sprintf('Complication time = %.1f seconds',(fit0time-starttime))));
+print(noquote(sprintf('Compilation time = %.1f seconds',(fit0time-starttime))));
 
 # fit with paralellization
 seed <- runif(1,1,1e6); # Stan wants a random integer from 1 to max supportable
@@ -115,7 +117,7 @@ for (i in 1:nChains){
 }
 
 
-save(stanModel, sflistFinal, file = file.path(config$path$Rdata, 'stanModelOutput/cap_basicRhoMuLambdaDB_%s.Rdata',format(Sys.Date(), format="%Y%m%d")))
+save(stanModel, sflistFinal, file = file.path(config$path$Rdata, 'stanModelOutput/cap_RhoMuLambdaDB_day+covRisk+Rho_%s.Rdata',format(Sys.Date(), format="%Y%m%d")))
 
 
 ```
