--- a/analysis/RDM/stan/cap_runStan.Rmd
+++ b/analysis/RDM/stan/cap_runStan.Rmd
@@ -117,7 +117,7 @@ for (i in 1:nChains){
 }
 
 
-save(stanModel, sflistFinal, file = file.path(config$path$Rdata, 'stanModelOutput/cap_RhoMuLambdaDB_day+covRisk+Rho_%s.Rdata',format(Sys.Date(), format="%Y%m%d")))
+save(stanModel, sflistFinal, file = file.path(config$path$Rdata, sprintf('stanModelOutput/cap_RhoMuLambdaDB_day+covRisk+Rho_%s.Rdata',format(Sys.Date(), format="%Y%m%d"))))
 
 
 ```
